# rust-rocket-svelte-example

./: .gitignore  CHANGELOG.md  README.md
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
backend/: Cargo.toml  Makefile.toml  README.md  Rocket.toml
backend/.sqlx/: query-6c6748c2354f74fd64b6a65a01e28c1dec2cd5f50833a49d2a814aeec460d05c.json  query-a1e6342ef7003d7cbc9cf33d18e17cef3f01937065af7f7a3022b51f2189b92f.json
backend/db/sqlx/migrations/: 20250127201200_create-product.sql  20250127201300_create-order.sql  20250127201400_init-dev-data.sql
backend/docs/: ARCHITECTURE.md  BUILD.md  CONFIGURE.md  EXAMPLE-CODEBERG-OIDC.md  OPERATIONS.md
backend/src/: main.rs
backend/src/configuration/: config.rs
backend/src/database/: mod.rs
backend/src/httpfirewall/: mod.rs  securityhttpheaders.rs
backend/src/inventory/: inventory.rs  mod.rs  product.rs
backend/src/oidc/: guard.rs  mod.rs  oidcflow.rs  routes.rs
backend/src/order/: order.rs
backend/src/routes/: inventory.rs  mod.rs  order.rs  redirect_frontend.rs  static_serve.rs
backend/src/services/: mod.rs  sanitization.rs
config/: Rocket.toml
frontend/: README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json
frontend/docs/: ARCHITECTURE.md  BUILD.md
frontend/src/: app.html  app.scss
frontend/src/lib/header/: Header.svelte
frontend/src/lib/httpclient/: HttpClient.svelte
frontend/src/lib/inventory/: Inventory.svelte  inventory.service.ts
frontend/src/lib/order/: Order.svelte  order.model.ts
frontend/src/mockdata/: inventory.mockdata.ts  order.mockdata.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/inventory/: +page.svelte
frontend/src/routes/order/: +page.svelte
frontend/src/routes/ui/inventory/: +page.svelte
frontend/src/routes/ui/order/: +page.svelte
frontend/static/css/: site-dark.css  site.css  smui-dark.css  smui.css
frontend/static/icons/robotomono/css/: site-dark.css  site.css  smui-dark.css  smui.css
