[package]
name = "rust-rocket-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4"
rocket = { version="0.5.1", features=["tls"]}
time = {version="0.3.36"}

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
