[package]
name = "rust-rocket-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4"
oauth2 = {version = "4.4.2"}
openidconnect = {version = "3.5.0"}
rocket = { version="0.5.1", features=["tls","json","http2"]}
rust_decimal = { version="1.36.0" }
rust_decimal_macros  = { version="1.36.0" }
sqlx = {version = "0.7", features = ["macros", "migrate"]}
time = {version="0.3.37", features=["serde","macros"]}
tracing = {version = "0.1.41"}
uuid = {version = "1.11.0", features=["serde","v4"] }

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
